--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@turf/turf": "^7.3.1",
     "firebase": "^12.6.0",
     "js-cookie": "^3.0.5",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
